# cpp_game_and_gameengine_studies

./: README.md
cpp-2d-game-engine/: README.md
cpp-2d-game-engine/2dgameengine/: CMakeLists.txt
cpp-2d-game-engine/2dgameengine/lib/SFML-master/: gitcommit.txt
cpp-2d-game-engine/2dgameengine/lib/lua-5.3.5/: CMakeLists.txt
cpp-2d-game-engine/2dgameengine/src/: Animation.cpp  Animation.h  AssetManager.cpp  AssetManager.h  Component.h  Constants.h  Entity.cpp  Entity.h  EntityManager.cpp  EntityManager.h  Game.cpp  Game.h  Main.cpp  Map.cpp  Map.h  TextureManager.h
cpp-2d-game-engine/2dgameengine/src/Components/: CameraComponent.h  KeyboardControlComponent.h  ScreenLimiterComponent.h  SpriteComponent.h  TextLabelComponent.h  TileComponent.h  TransformComponent.h
cpp-2d-game-engine/2dgameengine/src/Math/: Math.h
learn-programming-by-making-games/: CMakeLists.txt
learn-programming-by-making-games/Hangman/: CMakeLists.txt  Hangman.cpp
learn-programming-by-making-games/Hangman/solutions/: Hangman.cpp  Utils.cpp  Utils.h
learn-programming-by-making-games/NumberGuesser/: CMakeLists.txt
learn-programming-by-making-games/sample1/: CMakeLists.txt
learn-programming-by-making-games/sample1/src/: main.cpp
library_and_visibility/: CMakeLists.txt
library_and_visibility/app/: CMakeLists.txt  MainApp.cpp  MainApp.h
